Squashed commit of adding automated python tests
commit 4539462f60f0260a8b0524e582c23799a1ceb7f2
Author: coolio982 <wendy.gao@live.co.uk>
Date:   Thu Jun 8 17:39:28 2023 +0100

    add run script

commit 886fc5f53061132625623ce6a790ef09d704204b
Author: coolio982 <wendy.gao@live.co.uk>
Date:   Thu Jun 8 17:37:40 2023 +0100

     navigate to folder, add numpy dep

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,7 +27,7 @@ jobs:
           node-version: 16
           cache: npm
           
-      - name: Change directory to your desired folder
+      - name: Change directory to the desired folder
         run: cd Frontend
       
       - name: Install and build
