--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -11,15 +11,21 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v4
         with:
-          python-version: 3.x
-      - name: navigate to dependencies folder
-        run: cd Backend
-      
+          python-version: '3.9'
+      - name: Upgrade pip and setuptools
+        run: |
+          sudo apt-get install portaudio19-dev
+          python -m pip install pip==21.1.1
       - name: Install dependencies
-        run: pip install -r requirements.txt
-      - name: navigate to utils
-        run: cd utils
+        run: |
+          cd Backend/utils
+          python -m pip install numpy
+          pip install -r requirements.txt
+          pip install lap
+
       - name: Run unit tests
-        run: python unittests.py 
+        run: |
+          cd Backend/utils
+          python unittests.py 
