bug fixes re: calibration access

--- a/Backend/config.ini
+++ b/Backend/config.ini
@@ -2,17 +2,17 @@
 object_margin = 5
 background = ""
 port = 7890
-disp_x = -287.3920265780731
-disp_y = -134.18719211822662
-sf_x = 2.12624584717608
-sf_y = 1.9704433497536946
-width = 301
-height = 203
-x = 114
-y = 129
+disp_x = -280.0
+disp_y = -171.64502164502164
+sf_x = 2.0
+sf_y = 1.7316017316017316
+width = 320
+height = 231
+x = 122
+y = 128
 
 [CIRCLE_DETAILS]
-max_radius = 20
-min_radius = 10
+max_radius = 21
+min_radius = 11
 object_depth = 20
 
